# auto-lyricer

./: .gitignore  .taskmasterconfig  .windsurfrules  CLAUDE.md  flake.nix
backend/: .gitignore  .pre-commit-config.yaml  anthropic.go  complection.go  complectionGpt4o.go  config.yaml.example  go.mod  go.sum  lyrics.go  main.go  main.py  openai.go  pyproject.toml  realtimeGpt4o.go  runpod.go  runpodUVR.go  runpodWhisper.go  syncer.go  transcriptions.go  translator.go  video.go  youtube.go
backend-demo/: .gitignore  anthropic.go  complection.go  gemini.go  geminiOpenai.go  lyrics.go  main.go  openai.go  realtimeGpt4o.go  runpodUVR.go  runpodWhisper.go  syncer.go  transcriptions.go  translator.go  video.go  xai.go  youtube.go
backend/app/: api.py  container.py
backend/app/database/: AsyncSQLAlchemy.py  __init__.py  aiosqlite.py  async_sqlalchemy.py
backend/app/lyric/: __init__.py  api.py  container.py  dto.py  exception.py  model.py  repository.py  service.py  test_api.py  test_repository.py  test_service.py
backend/app/shared/: data.py  exception.py  pagination.py  supported.py
backend/app/stt/: __init__.py  abstract.py  converter.py  data.py  process.py  test_abstract.py  test_converter.py  test_data.py
backend/app/stt/background_remover/: __init__.py  runpod_uvr.py  test_runpod_uvr.py
backend/app/stt/speech_to_text/: runpod_whisper.py  test_runpod_whisper.py
backend/app/subtitle/: api.py  container.py  dto.py  exception.py  model.py  repository.py  service.py  test_api.py  test_repository.py  test_service.py  type.py
backend/app/transcription/: api.py  container.py  dto.py  exception.py  model.py  repository.py  service.py  test_api.py  test_repository.py  test_service.py
backend/app/video/: __init__.py  api.py  container.py  dto.py  exception.py  model.py  repository.py  service.py  test_api.py  test_repository.py  test_service.py
backend/app/video_retrieval/: __init__.py  exception.py  monkey_patch.py  retrieval.py  test_retrieval.py  type.py
demo/: index.html  package.json  pnpm-lock.yaml
demo/src/: App.tsx  Root.tsx  Video.tsx  index.css  pb.ts
scripts/: PRD.txt  task-complexity-report.json
