[project]
name = "backend"
version = "0.1.0"
description = "backend for auto-lyricer project"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.12.2",
    "aiosqlite>=0.21.0",
    "asyncio-gevent>=0.2.3",
    "dependency-injector>=4.46.0",
    "fastapi[standard]>=0.115.12",
    "gevent>=22.10.2",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
    "sqlalchemy>=2.0.39",
    "yt-dlp>=2025.3.25",
]
